<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.preferences.PreferencesActivity">

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp" android:id="@+id/guideline2"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_end="16dp"/>
    <TextView
            android:text="@string/txt_unid_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintHorizontal_bias="0.079" android:textSize="24sp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:orientation="horizontal"
            android:id="@+id/rgTemp">
        <RadioButton
                android:text="@string/rb_temp_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbTempC"
                android:checked="true"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rb_temp_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbTempF"
                android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/txt_desc_ling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintTop_toBottomOf="@+id/rgTemp" android:layout_marginTop="28dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:orientation="horizontal" android:id="@+id/rgLing">
        <RadioButton
                android:text="@string/rb_desc_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_desc_en"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rb_desc_pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_desc_pt"
                android:checked="true"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/bt_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSalvar"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.029"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/rgLing"/>
</android.support.constraint.ConstraintLayout>